updated about me

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </p>
           <p>
             Majority of my projects are made with HTML, CSS, Javascript, and
-            also react...
+            also react.
           </p>
         </div>
       </div>
