--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="box">
         <div class="card">
-          <a href="https://github.com/rlin4221" target="_blank">
+          <a href="https://rlin4221.github.io/GroGetter/" target="_blank">
             <i class="fa fa-car"></i
           ></a>
           <h5>GroGetter</h5>
